--- a/5001.properties
+++ b/5001.properties
@@ -1,4 +1,4 @@
 app.tenant.pagination=555
 app.tenant.result=555
 app.tenant.cost=5550000
-app.mam.sandhya=elastic search5001
+app.mam.sandhya=search5001
